--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.wujun234</groupId>
     <artifactId>uid-generator-spring-boot-starter</artifactId>
-    <version>1.0.2.RELEASE</version>
+    <version>1.0.3.SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>uid-generator-spring-boot-starter</name>
@@ -37,6 +37,10 @@
         <developer>
             <name>wujun</name>
             <email>wujun234@gmail.com</email>
+        </developer>
+        <developer>
+            <name>ettingshausen</name>
+            <email>ettingshausen@outlook.com</email>
         </developer>
     </developers>
 
